--- a/pangu-framework-parent/pom.xml
+++ b/pangu-framework-parent/pom.xml
@@ -46,14 +46,15 @@
         <java.version>1.8</java.version>
         <pangu.version>5.0.1</pangu.version>
         <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
-        <dubbo-spring-boot-starter.version>2.7.4.1</dubbo-spring-boot-starter.version>
-        <dubbo-registry-nacos.version>2.7.4.1</dubbo-registry-nacos.version>
+        <dubbo-spring-boot-starter.version>2.7.14</dubbo-spring-boot-starter.version>
+        <dubbo-registry-nacos.version>2.7.14</dubbo-registry-nacos.version>
         <!--TODO 0.2.10会出现获取不到配置和监听不到配置变更的问题，等待确认 -->
         <nacos-config-spring-boot-starter.version>0.2.7</nacos-config-spring-boot-starter.version>
         <nacos-config-spring-boot-actuator.version>0.2.7</nacos-config-spring-boot-actuator.version>
         <mybatis-plus.version>3.4.3.2</mybatis-plus.version>
         <mysql-connector-java.version>8.0.26</mysql-connector-java.version>
         <commons-collections4.version>4.4</commons-collections4.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
         <hutool-all.version>5.7.11</hutool-all.version>
         <lombok.version>1.18.20</lombok.version>
         <spring-boot-maven-plugin.version>2.5.4</spring-boot-maven-plugin.version>
@@ -111,6 +112,11 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-collections4</artifactId>
                 <version>${commons-collections4.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.hutool</groupId>
