--- a/pangu-framework-parent/pom.xml
+++ b/pangu-framework-parent/pom.xml
@@ -44,7 +44,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <pangu.version>5.0.1</pangu.version>
+        <pangu.version>5.0.7</pangu.version>
         <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
         <dubbo-spring-boot-starter.version>2.7.4.1</dubbo-spring-boot-starter.version>
         <dubbo-registry-nacos.version>2.7.4.1</dubbo-registry-nacos.version>
@@ -75,7 +75,7 @@
             </dependency>
             <dependency>
                 <groupId>com.gitee.pulanos.pangu</groupId>
-                <artifactId>pangu-framework-base</artifactId>
+                <artifactId>pangu-framework-spring-boot-starter</artifactId>
                 <version>${pangu.version}</version>
             </dependency>
             <dependency>
