--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,12 @@
 	<groupId>com.gitee.pulanos.pangu</groupId>
 	<artifactId>pangu-framework</artifactId>
 	<packaging>pom</packaging>
-	<version>5.0.6</version>
+	<version>5.0.7</version>
 
 	<modules>
 		<module>pangu-framework-parent</module>
 		<module>pangu-framework-base</module>
+		<module>pangu-framework-spring-boot-starter</module>
 		<module>pangu-framework-generator-maven-plugin</module>
 	</modules>
 
