新增范例：创建一个基于盘古框架的空应用

--- a/pangu-examples/pom.xml
+++ b/pangu-examples/pom.xml
@@ -12,6 +12,7 @@
 
 	<modules>
 		<module>pangu-examples-empty-springboot-based</module>
+		<module>pangu-examples-empty</module>
 		<module>pangu-examples-config-remote-nacos</module>
 		<module>pangu-examples-webapi</module>
 		<module>pangu-examples-crud</module>
