--- a/pangu-examples/pangu-examples-empty/src/main/resources/application-dev.properties
+++ b/pangu-examples/pangu-examples-empty/src/main/resources/application-dev.properties
@@ -14,6 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-spring.application.name=pangu-showcases-empty-springboot-based
+spring.application.name=pangu-examples-empty
 
 logging.level.root=INFO
+logging.level.com.gitee.pulanos.pangu=INFO
