--- a/pangu-examples/pangu-examples-empty/src/main/resources/application.properties
+++ b/pangu-examples/pangu-examples-empty/src/main/resources/application.properties
@@ -14,6 +14,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-spring.application.name=pangu-showcases-empty-springboot-based
-
-logging.level.root=INFO
+spring.profiles.active=${spring.profiles.active:dev}
