演示日志级别热切换功能。

--- a/pangu-examples/pom.xml
+++ b/pangu-examples/pom.xml
@@ -15,6 +15,7 @@
 		<module>pangu-examples-empty</module>
 		<module>pangu-examples-config-remote-nacos</module>
 		<module>pangu-examples-config-local</module>
+		<module>pangu-examples-log-dynamic</module>
 		<module>pangu-examples-webapi</module>
 		<module>pangu-examples-crud</module>
 		<module>pangu-examples-dubbo-api</module>
