--- a/pangu-examples/pangu-examples-crud/pom.xml
+++ b/pangu-examples/pangu-examples-crud/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.gitee.pulanos.pangu</groupId>
         <artifactId>pangu-framework-parent</artifactId>
-        <version>5.0.6</version>
+        <version>5.0.7</version>
         <relativePath/>
     </parent>
 
@@ -19,8 +19,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-framework-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-framework-data-jdbc-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
