--- a/pangu-examples/pangu-examples-crud/src/main/resources/application-dev.properties
+++ b/pangu-examples/pangu-examples-crud/src/main/resources/application-dev.properties
@@ -14,4 +14,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-spring.profiles.active=${spring.profiles.active:dev}
+spring.application.name=pangu-examples-crud
+
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/pangu-examples?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root123456
+mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+pangu.jdbc.db-type=mysql
+
+logging.level.root=INFO
+logging.level.com.gitee.pulanos.pangu=INFO
