--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<module>pangu-framework-parent</module>
 		<module>pangu-framework-spring-boot-starter</module>
 		<module>pangu-framework-generator-maven-plugin</module>
+		<module>pangu-framework-data-jdbc-spring-boot-starter</module>
 	</modules>
 
 </project>
