--- a/pangu-examples/pangu-examples-crud/src/main/resources/application-dev.properties
+++ b/pangu-examples/pangu-examples-crud/src/main/resources/application-dev.properties
@@ -23,6 +23,7 @@ spring.datasource.username=root
 spring.datasource.password=root123456
 mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+# 分页SQL方言数据库类型标识（缺省：自动识别）
 pangu.jdbc.db-type=mysql
 
 logging.level.root=INFO
