--- a/pangu-examples/pangu-examples-dubbo-service/pom.xml
+++ b/pangu-examples/pangu-examples-dubbo-service/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.gitee.pulanos.pangu</groupId>
         <artifactId>pangu-framework-parent</artifactId>
-        <version>5.0.6</version>
+        <version>5.0.7</version>
         <relativePath/>
     </parent>
 
@@ -19,16 +19,16 @@
     <dependencies>
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-framework-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-framework-dubbo-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.gitee.pulanos.pangu</groupId>
             <artifactId>pangu-examples-dubbo-api</artifactId>
             <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-registry-nacos</artifactId>
         </dependency>
     </dependencies>
 
