--- a/pangu-examples/pangu-examples-dubbo-gateway-service/pom.xml
+++ b/pangu-examples/pangu-examples-dubbo-gateway-service/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.gitee.pulanos.pangu</groupId>
         <artifactId>pangu-framework-parent</artifactId>
-        <version>5.0.6</version>
+        <version>5.0.7</version>
         <relativePath/>
     </parent>
 
@@ -17,23 +17,19 @@
     <version>1.0.0</version>
 
     <dependencies>
+
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
             <artifactId>pangu-examples-dubbo-api</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-framework-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-registry-nacos</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.shenyu</groupId>
-            <artifactId>shenyu-spring-boot-starter-client-apache-dubbo</artifactId>
-            <version>2.4.1</version>
+            <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-framework-dubbo-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
