网关模块封装 & 网关范例

--- a/pangu-examples/pangu-examples-gateway/src/main/resources/application.properties
+++ b/pangu-examples/pangu-examples-gateway/src/main/resources/application.properties
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-spring.application.name=pangu-examples-dubbo-gateway-service
+spring.application.name=pangu-examples-gateway
 spring.profiles.active=${spring.profiles.active:dev}
 nacos.config.bootstrap.enable=true
 nacos.config.bootstrap.log-enable=true
@@ -22,5 +22,5 @@ nacos.config.auto-refresh=true
 #对应Nacos配置中心的命名空间ID
 nacos.config.namespace=${nacos.namespace:pangu-dev}
 nacos.config.server-addr=${nacos.server-addr:127.0.0.1:8848}
-nacos.config.type=properties
-nacos.config.data-id=${spring.application.name}.properties
+nacos.config.type=yaml
+nacos.config.data-id=${spring.application.name}.yaml
