--- a/pangu-examples/pangu-examples-dubbo-gateway-service/pom.xml
+++ b/pangu-examples/pangu-examples-dubbo-gateway-service/pom.xml
@@ -17,12 +17,6 @@
     <version>1.0.0</version>
 
     <dependencies>
-
-        <dependency>
-            <groupId>com.gitee.pulanos.pangu</groupId>
-            <artifactId>pangu-examples-dubbo-api</artifactId>
-            <version>1.0.0</version>
-        </dependency>
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
             <artifactId>pangu-framework-spring-boot-starter</artifactId>
@@ -32,17 +26,13 @@
             <artifactId>pangu-framework-dubbo-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
+            <groupId>org.apache.shenyu</groupId>
+            <artifactId>shenyu-spring-boot-starter-client-apache-dubbo</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
+            <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-examples-dubbo-api</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
