--- a/pangu-examples/pom.xml
+++ b/pangu-examples/pom.xml
@@ -16,13 +16,14 @@
 		<module>pangu-examples-config-remote-nacos</module>
 		<module>pangu-examples-config-local</module>
 		<module>pangu-examples-log-dynamic</module>
-		<module>pangu-examples-webapi</module>
 		<module>pangu-examples-crud</module>
 		<module>pangu-examples-dubbo-api</module>
 		<module>pangu-examples-dubbo-service</module>
 		<module>pangu-examples-dubbo-consumer</module>
-		<module>pangu-examples-gateway</module>
 		<module>pangu-examples-dubbo-gateway-service</module>
+		<module>pangu-examples-webapi-local-service-based</module>
+		<module>pangu-examples-webapi-dubbo-service-based</module>
+		<module>pangu-examples-gateway</module>
 	</modules>
 
 </project>
