重构框架核心，封装网关starter：pangu-framework-web-spring-boot-starter

--- a/pangu-framework-parent/pom.xml
+++ b/pangu-framework-parent/pom.xml
@@ -86,6 +86,11 @@
             </dependency>
             <dependency>
                 <groupId>com.gitee.pulanos.pangu</groupId>
+                <artifactId>pangu-framework-web-spring-boot-starter</artifactId>
+                <version>${pangu.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.gitee.pulanos.pangu</groupId>
                 <artifactId>pangu-framework-jdbc-spring-boot-starter</artifactId>
                 <version>${pangu.version}</version>
             </dependency>
