--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<module>pangu-framework-jdbc-spring-boot-starter</module>
 		<module>pangu-framework-dubbo-spring-boot-starter</module>
 		<module>pangu-framework-gateway-spring-boot-starter</module>
+		<module>pangu-framework-web-spring-boot-starter</module>
 		<module>pangu-framework-generator-maven-plugin</module>
 	</modules>
 
