--- a/pangu-examples/pangu-examples-webapi-local-service-based/pom.xml
+++ b/pangu-examples/pangu-examples-webapi-local-service-based/pom.xml
@@ -22,8 +22,8 @@
             <artifactId>pangu-framework-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-framework-web-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
