编写网关相关范例：pangu-examples-gateway          如何开发一个网关模块，实现泛华调用后端Dubbo应用。
         pangu-examples-dubbo-gateway-service
         如何开发一个能和盘古网关系统集成的后端Dubbo应用。

         pangu-examples-webapi-local-service-based
         如何编写WebAPI接口，基于本地服务调用的传统单体开发模式。

--- a/pangu-examples/pangu-examples-dubbo-api/pom.xml
+++ b/pangu-examples/pangu-examples-dubbo-api/pom.xml
@@ -21,7 +21,7 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-annotation</artifactId>
             <version>${mybatis-plus.version}</version>
-            <scope>private</scope>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -39,7 +39,7 @@
             <plugin>
                 <groupId>com.gitee.pulanos.pangu</groupId>
                 <artifactId>pangu-framework-generator-maven-plugin</artifactId>
-                <version>5.0.6</version>
+                <version>5.0.7</version>
                 <configuration>
                     <url>jdbc:mysql://127.0.0.1:3306/pangu-examples</url>
                     <user>root</user>
