--- a/pangu-examples/pangu-examples-webapi-gateway-based/src/main/resources/application.properties
+++ b/pangu-examples/pangu-examples-webapi-gateway-based/src/main/resources/application.properties
@@ -14,4 +14,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+spring.application.name=pangu-examples-webapi-gateway-based
 spring.profiles.active=${spring.profiles.active:dev}
+nacos.config.bootstrap.enable=true
+nacos.config.bootstrap.log-enable=true
+nacos.config.auto-refresh=true
+#\u5BF9\u5E94Nacos\u914D\u7F6E\u4E2D\u5FC3\u7684\u547D\u540D\u7A7A\u95F4ID
+nacos.config.namespace=${nacos.namespace:pangu-dev}
+nacos.config.server-addr=${nacos.server-addr:127.0.0.1:8848}
+nacos.config.type=yaml
+nacos.config.data-id=${spring.application.name}.yaml
