--- a/pangu-examples/pangu-examples-webapi-dubbo-service-based/pom.xml
+++ b/pangu-examples/pangu-examples-webapi-dubbo-service-based/pom.xml
@@ -22,8 +22,17 @@
             <artifactId>pangu-framework-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-framework-web-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-framework-dubbo-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-examples-dubbo-api</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
