--- a/pangu-examples/pangu-examples-webapi-gateway-based/pom.xml
+++ b/pangu-examples/pangu-examples-webapi-gateway-based/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>com.gitee.pulanos.pangu</groupId>
-    <artifactId>pangu-examples-gateway</artifactId>
+    <artifactId>pangu-examples-webapi-gateway-based</artifactId>
     <packaging>jar</packaging>
     <version>1.0.0</version>
 
