--- a/pangu-examples/pangu-examples-config-local/pom.xml
+++ b/pangu-examples/pangu-examples-config-local/pom.xml
@@ -22,7 +22,7 @@
 
     <parent>
         <groupId>com.gitee.pulanos.pangu</groupId>
-        <artifactId>pangu-framework-parent</artifactId>
+        <artifactId>pangu-parent</artifactId>
         <version>5.0.7</version>
         <relativePath/>
     </parent>
@@ -35,7 +35,7 @@
     <dependencies>
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
-            <artifactId>pangu-framework-spring-boot-starter</artifactId>
+            <artifactId>pangu-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
