--- a/pangu-examples/pangu-examples-crud/pom.xml
+++ b/pangu-examples/pangu-examples-crud/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.gitee.pulanos.pangu</groupId>
-        <artifactId>pangu-framework-parent</artifactId>
+        <artifactId>pangu-parent</artifactId>
         <version>5.0.7</version>
         <relativePath/>
     </parent>
@@ -20,11 +20,11 @@
     <dependencies>
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
-            <artifactId>pangu-framework-spring-boot-starter</artifactId>
+            <artifactId>pangu-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
-            <artifactId>pangu-framework-jdbc-spring-boot-starter</artifactId>
+            <artifactId>pangu-jdbc-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -50,8 +50,8 @@
             </plugin>
             <plugin>
                 <groupId>com.gitee.pulanos.pangu</groupId>
-                <artifactId>pangu-framework-generator-maven-plugin</artifactId>
-                <version>5.0.6</version>
+                <artifactId>pangu-generator-maven-plugin</artifactId>
+                <version>5.0.7</version>
                 <configuration>
                     <url>jdbc:mysql://127.0.0.1:3306/pangu-examples</url>
                     <user>root</user>
