--- a/pangu-examples/pangu-examples-empty-springboot-based/pom.xml
+++ b/pangu-examples/pangu-examples-empty-springboot-based/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.gitee.pulanos.pangu</groupId>
-        <artifactId>pangu-framework-parent</artifactId>
+        <artifactId>pangu-parent</artifactId>
         <version>5.0.7</version>
         <relativePath/>
     </parent>
