--- a/pangu-examples/pangu-examples-webapi-dubbo-service-based/pom.xml
+++ b/pangu-examples/pangu-examples-webapi-dubbo-service-based/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.gitee.pulanos.pangu</groupId>
-        <artifactId>pangu-framework-parent</artifactId>
+        <artifactId>pangu-parent</artifactId>
         <version>5.0.7</version>
         <relativePath/>
     </parent>
@@ -19,15 +19,15 @@
     <dependencies>
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
-            <artifactId>pangu-framework-spring-boot-starter</artifactId>
+            <artifactId>pangu-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
-            <artifactId>pangu-framework-web-spring-boot-starter</artifactId>
+            <artifactId>pangu-web-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
-            <artifactId>pangu-framework-dubbo-spring-boot-starter</artifactId>
+            <artifactId>pangu-dubbo-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
