修改范例 将参数配置中心配置改为本地配置，方便演示和阅读代码。仅保留演示配置中心功能的范例使用配置中心来配置参数。

--- a/pangu-examples/pangu-examples-dubbo-consumer/src/main/resources/application-dev.properties
+++ b/pangu-examples/pangu-examples-dubbo-consumer/src/main/resources/application-dev.properties
@@ -14,4 +14,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-spring.profiles.active=${spring.profiles.active:dev}
+spring.application.name=pangu-examples-dubbo-consumer
+
+dubbo.protocol.name=dubbo
+#dubbo.protocol.port=-1  # \u8BBE\u7F6E\u7AEF\u53E3\u4E3A -1 \u8868\u793A dubbo \u81EA\u52A8\u626B\u63CF\u5E76\u4F7F\u7528\u53EF\u7528\u7AEF\u53E3\uFF08\u4ECE20880\u5F00\u59CB\u9012\u589E\uFF09\uFF0C\u907F\u514D\u4E86\u7AEF\u53E3\u51B2\u7A81\u7684\u95EE\u9898\u3002
+dubbo.protocol.port=20880
+dubbo.consumer.timeout=5000
+dubbo.registry.address=nacos://${nacos.server-addr}?namespace=${nacos.namespace}
+dubbo.consumer.check=false
+
+logging.level.root=INFO
+logging.level.com.gitee.pulanos.pangu=INFO
