--- a/pangu-parent/pom.xml
+++ b/pangu-parent/pom.xml
@@ -53,6 +53,7 @@
         <nacos-config-spring-boot-actuator.version>0.2.7</nacos-config-spring-boot-actuator.version>
         <mybatis-plus.version>3.4.3.2</mybatis-plus.version>
         <shenyu.version>2.4.1</shenyu.version>
+        <layering-cache.version>3.3.4</layering-cache.version>
         <mysql-connector-java.version>8.0.26</mysql-connector-java.version>
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
@@ -96,6 +97,11 @@
             </dependency>
             <dependency>
                 <groupId>com.gitee.pulanos.pangu</groupId>
+                <artifactId>pangu-cache-spring-boot-starter</artifactId>
+                <version>${pangu.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.gitee.pulanos.pangu</groupId>
                 <artifactId>pangu-dubbo-spring-boot-starter</artifactId>
                 <version>${pangu.version}</version>
             </dependency>
@@ -128,6 +134,11 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.xiaolyuh</groupId>
+                <artifactId>layering-cache-starter</artifactId>
+                <version>${layering-cache.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.shenyu</groupId>
