重构框架核心，封装缓存starter：pangu-framework-cache-spring-boot-starter

--- a/pangu-examples/pangu-examples-cache-single/src/main/resources/application.properties
+++ b/pangu-examples/pangu-examples-cache-single/src/main/resources/application.properties
@@ -14,17 +14,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-spring.application.name=pangu-examples-cache-layering
-
-# layering-cache \u591A\u7EA7\u7F13\u5B58
-# \u7F13\u5B58\u76D1\u63A7\u7EDF\u8BA1\u5F00\u5173 \u7F3A\u7701true
-layering-cache.stats=false
-layering-cache.redis.host=localhost
-layering-cache.redis.port=6379
-layering-cache.redis.password=
-layering-cache.redis.database=1
-layering-cache.redis.serializer=com.github.xiaolyuh.redis.serializer.JacksonRedisSerializer
-
-logging.level.root=INFO
-logging.level.com.gitee.pulanos.pangu=INFO
-logging.level.com.github.xiaolyuh=DEBUG
+spring.profiles.active=${spring.profiles.active:dev}
