--- a/pangu-examples/pangu-examples-cache-single/src/main/resources/application-dev.properties
+++ b/pangu-examples/pangu-examples-cache-single/src/main/resources/application-dev.properties
@@ -14,17 +14,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-spring.application.name=pangu-examples-cache-layering
+spring.application.name=pangu-examples-cache-single
 
-# layering-cache \u591A\u7EA7\u7F13\u5B58
-# \u7F13\u5B58\u76D1\u63A7\u7EDF\u8BA1\u5F00\u5173 \u7F3A\u7701true
-layering-cache.stats=false
-layering-cache.redis.host=localhost
-layering-cache.redis.port=6379
-layering-cache.redis.password=
-layering-cache.redis.database=1
-layering-cache.redis.serializer=com.github.xiaolyuh.redis.serializer.JacksonRedisSerializer
+# spring-cache \u4E00\u7EA7\u7F13\u5B58
+spring.redis.host=localhost
+spring.redis.database=1
+spring.redis.port=6379
+spring.redis.password=
 
 logging.level.root=INFO
 logging.level.com.gitee.pulanos.pangu=INFO
-logging.level.com.github.xiaolyuh=DEBUG
